# evolution-signal-spam

./: ChangeLog  Makefile.am  NEWS  ProjectHome.md  README  TODO  configure.in  report.c  signal-spam.eplug.xml  signal-spam.xml
branches/0.0.3/po/: fr.po
branches/0.0.4/: NEWS  README
branches/0.0.5/: report.c  signal-spam.c
po/: fr.po  signal-spam.pot
tags/0.0.1/: AUTHORS  README  configure.in
tags/0.0.2/: TODO  configure.in  report.c
tags/0.0.3/: TODO  signal-spam.c  signal-spam.xml
tags/0.0.4/: autogen.sh  configure.in
tags/0.0.5/: ChangeLog  configure.in  signal-spam.eplug.xml
tags/0.0.5/po/: POTFILES.in
tags/0.0.6/: ChangeLog  Makefile.am  NEWS  intltool-update.in
trunk/: ChangeLog  Makefile.am  README  TODO  configure.in  report.c  signal-spam.c  signal-spam.eplug.xml  signal-spam.xml
trunk/po/: fr.po  signal-spam.pot
